--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ input:checked + .slider .off
   <span class="slider round"><span class="on">AutoLoadGHEN ON</span><span class="off">AutoLoadGHEN OFF</span></span>
 </label>
 <button style='font-size:22px;text-align:center;color:#4863A0;background-color: #e5e4e2;' class="pointer" onclick=load_goldhen2b2() onMouseOver="msgs2.innerHTML='GoldHEN 2.4 + ItemzFlow by SISTRo'" ; onmouseout="msgs2.innerHTML='∆❍X❑'" type="button"><B>GoldHen+IF 2.4 </B></button></a>
-<button style='margin-top:5px;font-size:22px;text-align:center;color:white;background-color: goldenrod;' class="pointer" onclick=load_platinum() onMouseOver="msgs2.innerHTML='GoldHEN 2.4b16.2 by SISTRo'" ; onmouseout="msgs2.innerHTML='∆❍X❑'" type="button"><B>GoldHEN 2.4 </B></button></a>
+<button style='margin-top:5px;font-size:22px;text-align:center;color:white;background-color: goldenrod;' class="pointer" onclick=load_platinum() onMouseOver="msgs2.innerHTML='GoldHEN 2.4b17.2 by SISTRo'" ; onmouseout="msgs2.innerHTML='∆❍X❑'" type="button"><B>GoldHEN 2.4 </B></button></a>
 <label class="switch">
   <input type="checkbox" id="checkbox1" onclick="checkthebox1()">
   <span class="slider round"><span class="on">AutoLoadGHEN ON</span><span class="off">AutoLoadGHEN OFF</span></span>
@@ -297,7 +297,7 @@ input:checked + .slider .off
  }
  document.body.style.background = "url('"+localStorage.getItem("theme")+"')"
  document.body.style.backgroundSize = "cover"
- var imgs = ["1.jpg","2.jpg","3.jpg","4.jpg","5.jpg","6.jpg","7.jpg","8.jpg","9.jpg","10.jpg","11.jpg","12.jpg","13.jpg","14.jpg","15.jpg","16.jpg","17.jpg","18.jpg","19.jpg","20.jpg","21.jpg","22.jpg","23.jpg","24.jpg","25.jpg","26.jpg","27.jpg","28.jpg","29.jpg","30.jpg","31.jpg","32.jpg","33.jpg","34.jpg","35.jpg","36.jpg","37.jpg","38.jpg","39.jpg","40.jpg","41.jpg","42.jpg","43.jpg","44.jpg","45.jpg","46.jpg","47.jpg","48.jpg"];
+ var imgs = ["1.jpg","2.jpg","3.jpg","4.jpg","5.jpg","6.jpg","7.jpg","8.jpg","9.jpg","10.jpg","11.jpg","12.jpg","13.jpg","14.jpg","15.jpg","16.jpg","17.jpg","18.jpg","19.jpg","20.jpg","21.jpg","22.jpg","23.jpg","24.jpg","25.jpg","26.jpg","27.jpg","28.jpg","29.jpg","30.jpg","31.jpg","32.jpg","33.jpg","34.jpg","35.jpg","36.jpg","37.jpg","38.jpg","39.jpg","40.jpg","41.jpg","42.jpg","43.jpg","44.jpg","45.jpg","46.jpg","47.jpg","48.jpg","49.jpg"];
  render()
  function render(){
      document.querySelector(".themes").innerHTML=""
