--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ input:checked + .slider .off
 <button style='font-size:20px;text-align:center;color:#FFFFFF' class="pointer" onclick=load_cacheinstall2() onMouseOver="msgs2.innerHTML='DB Backup'" ; onmouseout="msgs2.innerHTML='∆❍X❑'" type="button"><B> DB Backup </B></button></a>
 <button style='font-size:20px;text-align:center;color:#FFFFFF' class="pointer" onclick=load_cacheinstall() onMouseOver="msgs2.innerHTML='DB Restore'" ; onmouseout="msgs2.innerHTML='∆❍X❑'" type="button"><B> DB Restore </B></button></a>
 </div></p>
-<div class="about2" style='margin-right:75px'><a href="https://neo305.github.io/ESP32-S2-Themes/theme.html"><button id = "enter" style='font-size:20px;text-align:center;color:#FFFFFF' class="pointer" onMouseOver="msgs2.innerHTML='Change Wallpaper'" ; onmouseout="msgs2.innerHTML='∆❍X❑'" type="button"><B>Themes</B></button></a></div>
+<div class="about2" style='margin-right:75px'><a href="https://neo305.github.io/ESP32-S2-Themes-103"><button id = "enter" style='font-size:20px;text-align:center;color:#FFFFFF' class="pointer" onMouseOver="msgs2.innerHTML='Change Wallpaper'" ; onmouseout="msgs2.innerHTML='∆❍X❑'" type="button"><B>Themes</B></button></a></div>
 
 <div class="about" style='margin-left:75px'> <a href="https://neo305.github.io/ESP32-Payloads/"><button id = "enter" style='font-size:20px;text-align:center;color:#FFFFFF' class="pointer" onMouseOver="msgs2.innerHTML='Offline Payloads Host'" ; onmouseout="msgs2.innerHTML='∆❍X❑'" type="button"><B>Payloads</B></button></a></div>
 
